# SPIND

./: .gitignore  .pre-commit-config.yaml  README.md  SPIND_v2.py  SPIND_v3.py  config.yml  gen_event.py  gen_hkl_table_v2.py  index.py  pyproject.toml  setup.cfg  setup.py
docs/: README.md
spind/: __init__.py  _hkl_matcher.py  _index.py  _params.py  _solution.py  _utils.py  simulator.py
spind/tests/: test_spind.py
src/spind/: _hkl_matcher.py  _index.py  _solution.py
