[project]
name = "SPIND"
version = "0.0.0"
license = { text = "GPLv3" }
urls = { Homepage = "https://github.com/szsdk/SPIND" }
dependencies = [
    "click",
    "h5py",
    "numba",
    "numpy",
    "rich",
    "pyyaml",
    "numpy-quaternion",
    "pydantic>=2.5.3",
]
requires-python = ">=3.7"

[project.scripts]
spind = "bin.spind_cmd:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "CRITICAL"
